--- a/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
@@ -111,6 +111,7 @@
                                 matTooltip="Cadastro da Pessoa"
                                 matTooltipPosition="left"
                                 style="cursor:pointer;"
+                                *ngIf="isEditPersonVisible"
                                 (click)="openEditPersonDialog()">
                             </i>
                         </mat-hint>
