--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
@@ -3,7 +3,119 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Visão de faturamento" containerPath="Gerencial" [information]="informationField">
-      <app-visao-faturamento-pesquisa></app-visao-faturamento-pesquisa>
+      <mat-tab-group #tabGroup animationDuration="0ms">
+
+        <mat-tab label="Orçamento"></mat-tab>
+
+        <mat-tab label="Agendamento"></mat-tab>
+
+        <mat-tab label="Aplicação">
+          <div class="row" style="margin:0.5rem">
+
+            <div class="col-xl-6 col-md-6 mb-4">
+                <div class="card border-left-success shadow h-100 py-2 card-dash">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                    TOTAL DE APLICAÇÕES REALIZADAS</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{applicationsCompleted}}</div>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-vial-circle-check fa-2x text-gray-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 mb-4">
+                <div class="card border-left-warning shadow h-100 py-2 card-dash">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                    APLICAÇÕES PENDENTES</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{applicationsPending}}</div>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-vial-virus fa-2x text-gray-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+          <div class="row" style="margin:0.5rem">
+            <div class="col-lg-4 mb-1">
+              <div class="card shadow mb-4 card-dash">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-gray-600">Aplicadas por Gênero</h6>
+                </div>
+                <div class="card-body">
+                  <canvas baseChart 
+                          [data]="barChartApplicationGenderData" 
+                          [plugins]="barChartApplicationGenderPlugins" 
+                          [type]="barChartApplicationGenderType" 
+                          [options]>
+                         
+                  </canvas>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-1">
+              <div class="card shadow mb-4 card-dash">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-gray-600">Aplicadas por Produto</h6>
+                </div>
+                <div class="card-body">
+                  <canvas baseChart 
+                          [data]="barChartApplicationProductData" 
+                          [plugins]="barChartApplicationProductPlugins" 
+                          [type]="barChartApplicationProductType" >
+                  </canvas>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-1">
+              <div class="card shadow mb-4 card-dash">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-gray-600">Integrações SIPNI</h6>
+                </div>
+                <div class="card-body">
+                  <canvas baseChart 
+                          [data]="barChartApplicationIntegrationData" 
+                          [plugins]="barChartApplicationIntegrationPlugins" 
+                          [type]="barChartApplicationIntegrationType" >
+                  </canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row" style="margin:0.5rem">
+            <div class="col-lg-12 mb-4">
+              <div class="card shadow mb-4 card-dash">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-gray-600">Aplicadas por Faixa Etária</h6>
+                </div>
+                <div class="card-body">
+                  <canvas 
+                          baseChart 
+                          [data]="barChartApplicationAgeData" 
+                          [plugins]="barChartApplicationAgePlugins" 
+                          [type]="barChartApplicationAgeType">
+                  </canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
     </app-container>
   </div>
 </div>
