Conclusão aba agendamentos

--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -85,7 +85,7 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="/empresas">EMPRESA</a>
                     <a class="collapse-item" href="/gerenciar-usuarios">GERENCIAR USUÁRIOS</a>
-                    <a class="collapse-item" href="/visao-faturamento">VISÃO FATURAMENTO</a>
+                    <a class="collapse-item" href="/visao-faturamento">DASHBOARD OPERACIONAL</a>
                     <a class="collapse-item" href="/recursos">RECURSOS</a>
                 </div>
             </div>
