--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
@@ -2,12 +2,102 @@
   <app-side-menu></app-side-menu>
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
-    <app-container containerTitle="Visão de faturamento" containerPath="Gerencial" [information]="informationField" [isClickable]=true [year]=year [month]=month (responseMonthYear)="reciveMonth($event)">
+    <app-container containerTitle="Dashboard Operacional" containerPath="Gerencial" [information]="informationField" [isClickable]=true [year]=year [month]=month (responseMonthYear)="reciveMonth($event)">
       <mat-tab-group #tabGroup animationDuration="0ms">
 
         <mat-tab label="Orçamento"></mat-tab>
 
-        <mat-tab label="Agendamento"></mat-tab>
+        <mat-tab label="Agendamento">
+
+          <div class="row" style="margin:0.5rem">
+
+            <div class="col-xl-4 col-md-6 mb-4">
+                <div class="card border-left-success shadow h-100 py-2 card-dash">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                    AGENDAMENTOS CONCLUÍDOS</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{authorizationConcludedNumber}}</div>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-calendar-check fa-2x text-gray-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+  
+            <div class="col-xl-4 col-md-6 mb-4">
+                <div class="card border-left-warning shadow h-100 py-2 card-dash">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                    AGENDAMENTOS CONFIRMADOS</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{authorizationScheduleNumber}}</div>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-calendar-day fa-2x text-gray-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+  
+            <div class="col-xl-4 col-md-6 mb-4">
+              <div class="card border-left-danger shadow h-100 py-2 card-dash">
+                  <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                          <div class="col mr-2">
+                              <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
+                                  AGENDAMENTOS CANCELADOS</div>
+                              <div class="h5 mb-0 font-weight-bold text-gray-800">{{authorizationCanceledNumber}}</div>
+                          </div>
+                          <div class="col-auto">
+                              <i class="fas fa-calendar-xmark fa-2x text-gray-300"></i>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="row" style="margin:0.5rem">
+          <div class="col-lg-4 mb-1">
+            <div class="card shadow mb-4 card-dash">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-gray-600">Notificações SMS por Agendamento</h6>
+              </div>
+              <div class="card-body" style="min-height: 370px;">
+                <canvas baseChart 
+                        [data]="barChartAuthorizationNotificationData" 
+                        [plugins]="barChartAuthorizationNotificationPlugins" 
+                        [type]="barChartAuthorizationNotificationType">
+                </canvas>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-8 mb-1">
+            <div class="card shadow mb-4 card-dash">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-gray-600">Notificações SMS por Situação</h6>
+              </div>
+              <div class="card-body" style="min-height: 370px;">
+                <canvas baseChart 
+                        [data]="barChartAuthotizationSmsData" 
+                        [plugins]="barChartAuthotizationSmsPlugins" 
+                        [type]="barChartAuthotizationSmsType" 
+                        [legend]="false">
+                </canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        </mat-tab>
+
 
         <mat-tab label="Aplicação">
           <div class="row" style="margin:0.5rem">
@@ -88,7 +178,7 @@
                   <canvas baseChart 
                           [data]="barChartApplicationTypeData" 
                           [plugins]="barChartApplicationTypePlugins" 
-                          [type]="barChartApplicationTypeType" >
+                          [type]="barChartApplicationTypeType">
                   </canvas>
                 </div>
               </div>
@@ -105,7 +195,8 @@
                   <canvas baseChart 
                           [data]="barChartApplicationProductData" 
                           [plugins]="barChartApplicationProductPlugins" 
-                          [type]="barChartApplicationProductType" >
+                          [type]="barChartApplicationProductType" 
+                          [legend]="false">
                   </canvas>
                 </div>
               </div>
@@ -121,7 +212,8 @@
                           baseChart 
                           [data]="barChartApplicationAgeData" 
                           [plugins]="barChartApplicationAgePlugins" 
-                          [type]="barChartApplicationAgeType">
+                          [type]="barChartApplicationAgeType"
+                          [legend]="false">
                   </canvas>
                 </div>
               </div>
